--- a/acts/index.html
+++ b/acts/index.html
@@ -284,11 +284,21 @@
     </p>
 
     <p>
+        Apr 18, '24, 
+        <b>Siheng Yi</b>, 
+        <a onclick="toggle_visibility('24-7');">
+        <i>TBA</i></a><br />
+        <div id="24-7" class="toshow" style="display:none">
+            
+        </div>
+    </p>
+
+    <p>
         TBD, '24, 
         <b>Pingyao Feng</b>, 
-        <a onclick="toggle_visibility('24-7');">
+        <a onclick="toggle_visibility('24-8');">
         <i>Artificial-intelligence-aided academic writing</i></a><br />
-        <div id="24-7" class="toshow" style="display:none">
+        <div id="24-8" class="toshow" style="display:none">
             
         </div>
     </p>
