--- a/grad/index.html
+++ b/grad/index.html
@@ -209,12 +209,32 @@
                 a TQFT promoted from the quantum Teichmüller theory.  In this talk, I will briefly introduce the construction of 
                 Teichmüller TQFT and its connections to the Quantum Modularity Conjecture.
             </li>
+
+            <ul>
+                References:
+                <li>
+                    Li Yunsheng, 
+                    <a href="https://li-yunsheng.github.io/Thesis/On_the_Quantum_Modularity_Conjecture_for_Knots.pdf" 
+                    target="_blank">On the Quantum Modularity Conjecture for knots</a>
+                </li>
+
+                <li>
+                    Eiichi Piguet, <a href="24spr/Piguet.pdf" 
+                    target="_blank">Teichmüller TQFT calculations for infinite families of knots</a>
+                </li>
+            </ul>
         </div>
     </p>
 
     <p>
         Apr 2, '24, 
-        <b>Qingrui Qu</b>, 
+        <b>Yunsheng Li</b>, 
+        <i>The Teichmüller TQFT and the Quantum Modularity Conjecture, II</i>
+    </p>
+
+    <p>
+        Apr 9, '24, 
+        <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('16');">
         <i>TBA</i></a><br />
         <div id="16" class="toshow" style="display:none">
@@ -223,8 +243,8 @@
     </p>
 
     <p>
-        Apr 9, '24, 
-        <b>Yifan Wu</b>, 
+        Apr 16, '24, 
+        <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('17');">
         <i>TBA</i></a><br />
         <div id="17" class="toshow" style="display:none">
