--- a/acts/index.html
+++ b/acts/index.html
@@ -260,6 +260,8 @@
         <i>How to integrate persistent homology into graph neural networks</i></a><br />
         <div id="24-5" class="toshow" style="display:none">
             <li>Discuss <a href="https://arxiv.org/abs/2402.16346" target="_blank">Boosting graph pooling with persistent homology</a>.</li>
+        
+            <li><a href="24/Ding-20240328.pdf" target="_blank">Slides</a> (page 11)</li>
         </div>
     </p>
 
