--- a/acts/index.html
+++ b/acts/index.html
@@ -259,9 +259,9 @@
         <a onclick="toggle_visibility('24-5');">
         <i>How to integrate persistent homology into graph neural networks</i></a><br />
         <div id="24-5" class="toshow" style="display:none">
-            <li>Discuss <a href="https://arxiv.org/abs/2402.16346" target="_blank">Boosting graph pooling with persistent homology</a>.</li>
+            <li>Discuss <a href="https://arxiv.org/abs/2402.16346" target="_blank">Boosting graph pooling with persistent homology</a>, with a <a href="https://openreview.net/forum?id=9zpOUsOvLM" target="_blank">grain of salt</a> for improvement.</li>
         
-            <li><a href="24/Ding-20240328.pdf" target="_blank">Slides</a> (page 11)</li>
+            <li><a href="24/Ding-20240328.pdf" target="_blank">Slides</a> (can go straight to page 11)</li>
         </div>
     </p>
 
