--- a/grad/index.html
+++ b/grad/index.html
@@ -238,9 +238,12 @@
         Apr 9, '24, 
         <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('16');">
-        <i>TBA</i></a><br />
+        <i>Pipe Rings and Pipe Formal Groups</i></a><br />
         <div id="16" class="toshow" style="display:none">
-            
+            <li>
+                In this talk, we review some basic facts about formal schemes and formal groups, then we generalize these ideas to a more general setting called Pipe rings and Pipe formal groups.
+                These objects are useful to describe homotopy groups of spectra localized at Morava K theories and their moduli interpretations.
+            </li>
         </div>
     </p>
 
