--- a/grad/index.html
+++ b/grad/index.html
@@ -251,7 +251,7 @@
         Apr 16, '24, 
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('17');">
-        <i>TBA</i></a><br />
+        <i>On the existence of Adams's classical $v_1$-periodicity and Andrews's motivic $w_1$-periodicity in homotopy groups</i></a><br />
         <div id="17" class="toshow" style="display:none">
             
         </div>
