--- a/acts/index.html
+++ b/acts/index.html
@@ -278,12 +278,16 @@
         Apr 11, '24, 
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('24-6');">
-        <i>Topological, categorical, statistical, and machine learning methods in computational number theory and natural language processing</i></a><br />
+        <i>Topological, categorical, statistical, and machine learning methods in natural language processing and computational number theory, I</i></a><br />
         <div id="24-6" class="toshow" style="display:none">
+            Main references:
             <li>
-                Discuss <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of 
-                Birch–Swinnerton-Dyer</a> and <a href="https://www.ams.org/journals/notices/202402/rnoti-p174.pdf" target="_blank">The structure of meaning in language: 
-                Parallel narratives in linear algebra and category theory</a>.  
+                <a href="https://www.ams.org/journals/notices/202402/rnoti-p174.pdf" target="_blank">The structure of meaning in language: Parallel narratives in 
+                linear algebra and category theory</a>
+            </li>
+            <li>
+                <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of 
+                Birch–Swinnerton-Dyer</a>
             </li>
         </div>
     </p>
@@ -292,7 +296,7 @@
         Apr 18, '24, 
         <b>Siheng Yi</b>, 
         <a onclick="toggle_visibility('24-7');">
-        <i>TBA</i></a><br />
+        <i>An introduction to multiparameter persistence</i></a><br />
         <div id="24-7" class="toshow" style="display:none">
             
         </div>
