--- a/grad/index.html
+++ b/grad/index.html
@@ -271,7 +271,7 @@
         Apr 30, '24, 
         <b>Yunhao Sun</b>, 
         <a onclick="toggle_visibility('19');">
-        <i>TBA</i></a><br />
+        <i>Motives, Motivic Cohomology and Motivic Homotopy: a historical introduction</i></a><br />
         <div id="19" class="toshow" style="display:none">
             
         </div>
