--- a/grad/index.html
+++ b/grad/index.html
@@ -244,6 +244,10 @@
                 In this talk, we review some basic facts about formal schemes and formal groups, then we generalize these ideas to a more general setting called Pipe rings and Pipe formal groups.
                 These objects are useful to describe homotopy groups of spectra localized at Morava K theories and their moduli interpretations.
             </li>
+
+            <li><a href="24spr/0409-WuYifan-Slides.pdf" target="_blank">Slides</a></li>
+
+            <li><a href="24spr/0409-WuYifan-Notes.pdf" target="_blank">Notes</a></li>
         </div>
     </p>
 
