--- a/grad/index.html
+++ b/grad/index.html
@@ -277,7 +277,12 @@
         <a onclick="toggle_visibility('19');">
         <i>Motives, Motivic Cohomology and Motivic Homotopy: a historical introduction</i></a><br />
         <div id="19" class="toshow" style="display:none">
-            
+            <li>
+                In this talk, we will overview some aspects of theory of motives. Mainly some big conjecgures. 
+                Currently, conjectures is still more than theorems in motives. Also, we will talk about motivic homotopy theory. 
+                It can be thought as non-abelian generalization of motives. The philosophy of motives is studying universal invarianta. 
+                We will show some examples to illustrate it.
+            </li>
         </div>
     </p>
 
