--- a/grad/index.html
+++ b/grad/index.html
@@ -252,6 +252,22 @@
     </p>
 
     <p>
+        Apr 23, '24, 
+        <b>Jiacheng Liang</b>, 
+        <!-- 
+        <a onclick="toggle_visibility('18');">
+        -->
+        <i>Picard $\infty$-groupoids, Picard groups of $\mathbb{E}_\infty$–rings and generalized Thom spectra</i></a><br />
+        <!--
+        <div id="18" class="toshow" style="display:none">
+            In this talk, we will overview some aspects of the theory of motives.  There are some significant conjectures.  Currently, there are still more conjectures than 
+            theorems in the field of motives.  We will also discuss motivic homotopy theory.  It can be thought of as a non-abelian generalization of motives.  The 
+            philosophy of motives is to study universal invariants.  We will provide some examples to illustrate it.  
+        </div>
+        -->
+    </p>
+    
+    <p>
         Apr 30, '24, 
         <b>Yunhao Sun</b>, 
         <a onclick="toggle_visibility('17');">
