--- a/grad/index.html
+++ b/grad/index.html
@@ -254,17 +254,19 @@
     <p>
         Apr 23, '24, 
         <b>Jiacheng Liang</b>, 
-        <!-- 
         <a onclick="toggle_visibility('18');">
-        -->
         <i>Picard $\infty$-groupoids, Picard groups of $\mathbb{E}_\infty$–rings and generalized Thom spectra</i></a><br />
-        <!--
         <div id="18" class="toshow" style="display:none">
-            In this talk, we will overview some aspects of the theory of motives.  There are some significant conjectures.  Currently, there are still more conjectures than 
-            theorems in the field of motives.  We will also discuss motivic homotopy theory.  It can be thought of as a non-abelian generalization of motives.  The 
-            philosophy of motives is to study universal invariants.  We will provide some examples to illustrate it.  
+            <li>
+                In this talk, we will introduce the Picard \infty-groupoids and calculate Picard groups of several E_\infty rings,
+    like K-theory spectra and topological modular forms. 
+    Besides, we also introduce how to generalize the Thom spectrum functor into any presentably symmetric monoidal \infty-category,
+    by using the universal property of Picard \infty-groupoids.
+            </li>
+
+            <li><a href="24spr/0423-Liang.pdf" target="_blank">Slides</a></li>
+            
         </div>
-        -->
     </p>
     
     <p>
