--- a/grad/index.html
+++ b/grad/index.html
@@ -258,10 +258,10 @@
         <i>Picard $\infty$-groupoids, Picard groups of $\mathbb{E}_\infty$–rings and generalized Thom spectra</i></a><br />
         <div id="18" class="toshow" style="display:none">
             <li>
-                In this talk, we will introduce the Picard \infty-groupoids and calculate Picard groups of several E_\infty rings,
-    like K-theory spectra and topological modular forms. 
-    Besides, we also introduce how to generalize the Thom spectrum functor into any presentably symmetric monoidal \infty-category,
-    by using the universal property of Picard \infty-groupoids.
+                In this talk, we will introduce the Picard $\infty$-groupoids and calculate Picard groups of several $E_\infty$ rings,
+    such as K-theory spectra and topological modular forms. 
+    Besides, we also introduce how to generalize the Thom spectrum functor into any presentably symmetric monoidal $\infty$-category,
+    by using the universal property of Picard $\infty$-groupoids.
             </li>
 
             <li><a href="24spr/0423-Liang.pdf" target="_blank">Slides</a></li>
