--- a/grad/index.html
+++ b/grad/index.html
@@ -258,7 +258,7 @@
         <i>Picard $\infty$-groupoids, Picard groups of $\mathbb{E}_\infty$–rings and generalized Thom spectra</i></a><br />
         <div id="18" class="toshow" style="display:none">
             <li>
-                In this talk, we will introduce the Picard $\infty$-groupoids and calculate Picard groups of several $E_\infty$ rings,
+                In this talk, we will introduce the Picard $\infty$-groupoids and calculate Picard groups of several $\mathbb{E}_\infty$ rings,
     such as K-theory spectra and topological modular forms. 
     Besides, we also introduce how to generalize the Thom spectrum functor into any presentably symmetric monoidal $\infty$-category,
     by using the universal property of Picard $\infty$-groupoids.
