--- a/grad/index.html
+++ b/grad/index.html
@@ -159,7 +159,7 @@
 -->
 
 
-<h3>Talks in Spring 2024 (Tuesdays 4:20 in M5024)</h3>
+<h3>Talks in Spring 2024 (mostly Tuesdays 4:20 in M5024)</h3>
 
     <p>
         Mar 12, '24, 
