--- a/grad/index.html
+++ b/grad/index.html
@@ -280,17 +280,11 @@
             philosophy of motives is to study universal invariants.  We will provide some examples to illustrate it.  
         </div>
     </p>
-<!--
-    <p>
-        May 7, '24, 
-        <b>Wenhui Yang</b>, 
-        <i>TBA</i></a><br />
-    </p>
--->
+    
     <p>
         May 14, '24, 
         <b>Peng Huang</b>, 
-        <i>TBA</i></a><br />
+        <i>Functoriality of the Postnikov tower</i></a><br />
     </p>
 
     <p>
@@ -302,6 +296,12 @@
     <p>
         May 28, '24, 
         <b>Chenlu Huang</b>, 
+        <i>TBA</i></a><br />
+    </p>
+
+    <p>
+        June 4, '24, 
+        <b>Zhonglin Wu</b>, 
         <i>TBA</i></a><br />
     </p>
 
