--- a/grad/index.html
+++ b/grad/index.html
@@ -288,6 +288,20 @@
     </p>
 
     <p>
+        May 15, '24 (Wednesday in M4009) 
+        <ul>
+            <li>10:00–10:30, <b>Jiacheng Liang</b>, <i>Master's thesis defense: Elliptic cohomology theories and the $\sigma$-orientation</i></li>
+
+            <li>10:50–11:20, <b>Zhonglin Wu</b>, <i>Master's thesis defense: Spectral sequence calculation for unstable $v_n$-periodic homotopy groups of spheres</i></li>
+
+            <li>3:00–3:45, <b>Xuecai Ma</b>, <i>Doctoral thesis defense: Methods of spectral algebraic geometry in chromatic homotopy theory</i></li>
+
+            <li>4:30–5:00, <b>Yunhao Sun</b>, <i>Master's thesis proposal: Algebraic cobordism and cycle class map</i></li>
+        </ul>
+        <br />
+    </p>
+
+    <p>
         May 21, '24, 
         <b>Zhou Fang</b>, 
         <i>TBA</i></a><br />
