--- a/grad/index.html
+++ b/grad/index.html
@@ -285,6 +285,14 @@
         May 14, '24, 
         <b>Peng Huang</b>, 
         <i>Functoriality of the Postnikov tower</i></a><br />
+        <div id="19" class="toshow" style="display:none">
+            <li>
+            In this talk, I will introduce the Moore tower, Whitehead tower and particular the Postnikov tower. 
+            I will show how to construct a Postnikov tower of a 0-connected CW complex and discuss the functoriality of the Postnikov tower. 
+            On the other hand, I will give an example to show that the Moore tower has no functoriality.
+            </li>
+            <li><a href="24spr/0514-Huang.pdf" target="_blank">Notes</a></li>
+        </div>
     </p>
 
     <p>
