--- a/grad/index.html
+++ b/grad/index.html
@@ -284,7 +284,8 @@
     <p>
         May 14, '24, 
         <b>Peng Huang</b>, 
-        <i>Functoriality of the Postnikov tower</i></a><br />
+        <a onclick="toggle_visibility('19');">
+        <i>Functoriality of the Postnikov tower</i></a><br/>
         <div id="19" class="toshow" style="display:none">
             <li>
             In this talk, I will introduce the Moore tower, Whitehead tower and particular the Postnikov tower. 
