--- a/grad/index.html
+++ b/grad/index.html
@@ -311,8 +311,12 @@
 
     <p>
         May 21, '24, 
-        <b>Zhou Fang</b>, 
-        <i>TBA</i></a><br />
+        <b>Zhou Fang, Wenhui Yang, Chenlu Huang</b>, 
+        <a onclick="toggle_visibility('20');">
+        <i>Topology and geometry in topological singularities</i></a><br />
+        <div id="20" class="toshow" style="display:none">
+            <li><a href="24spr/0521-Fang.pdf" target="_blank">Slides</a></li>
+        </div>
     </p>
 
     <p>
