--- a/grad/index.html
+++ b/grad/index.html
@@ -321,8 +321,8 @@
 
     <p>
         May 28, '24, 
-        <b>Chenlu Huang</b>, 
-        <i>TBA</i></a><br />
+        <b>Ni An</b>, 
+        <i>The colored Jones polynomial, Nahm sum and stability</i></a><br />
     </p>
 
     <p>
