--- a/grad/index.html
+++ b/grad/index.html
@@ -248,7 +248,11 @@
     <p>
         Apr 16, '24, 
         <b>Qingrui Qu</b>, 
+        <a onclick="toggle_visibility('21');">
         <i>On the existence of Adams's classical $v_1$-periodicity and Andrews's motivic $w_1$-periodicity in homotopy groups</i></a><br />
+        <div id="21" class="toshow" style="display:none">
+            The purpose of this talk is to introduce Michael Andrews's work on the first discovery of exotic periodicity in motivic homotopy groups and the identification of six families of infinity elements. Firstly, we will provide a brief overview of the chromatic phenomenon in classical homotopy and Adams' 8-periodicity isomorphism, expressed by a Massey product in ASS. Then, we will delve into the motivic homotopy theory and explore the philosophy behind Miller's square, which serves as an analogue and connection between motivic Adams SS and classical Adams-Novikov SS. This perspective allows us to consider the non-nilpotent element $\eta$ as the $w_0$ period, similar to the role played by 2 as the $v_0$ period. After defining a Thom reduction map to compare the $E^2$ pages of two SS, we can reduce the existence of $w_1^4$ motivic periodic map to the existence of $v_1^4$ classical periodic map, as initially had been found by Adams in 1966.
+        </div>
     </p>
 
     <p>
