--- a/grad/index.html
+++ b/grad/index.html
@@ -319,7 +319,7 @@
         <a onclick="toggle_visibility('20');">
         <i>Topology and geometry in topological singularities</i></a><br />
         <div id="20" class="toshow" style="display:none">
-            <li><a href="24spr/0521-Fang.pdf" target="_blank">Slides</a></li>
+            <li><a href="24spr/0521-FangYangHuang.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
