--- a/acts/index.html
+++ b/acts/index.html
@@ -307,7 +307,13 @@
     <p>
         May 9, '24, 
         <b>Qingrui Qu</b>, 
+        <a onclick="toggle_visibility('24-7');">
         <i>Topological, categorical, statistical, and machine learning methods in natural language processing and computational number theory, II</i></a><br />
+        <div id="24-7" class="toshow" style="display:none">
+            A postlude: Thomas Fink, 
+            <a href="https://www.readcube.com/nde/eyJhbGciOiJFUzI1NiJ9.eyJkb2kiOiIxMC4xMDM4L25kZS8wMDI4MDgzNi8yMDI0LzYyOS84MDEyIn0.NWPJ1M-oEKskFFvb-rZ717RnqIMFikTr1BiIssckniaXmCaH_jphb-Xl_KhH5lendvqzqCHMnK1mv5_rglR3Dg#p=15" target="_blank">
+            Why mathematics is set to be revolutionized by AI</a>
+        </div>
     </p>
 
     <p>
