--- a/grad/index.html
+++ b/grad/index.html
@@ -248,9 +248,9 @@
     <p>
         Apr 16, '24, 
         <b>Qingrui Qu</b>, 
-        <a onclick="toggle_visibility('21');">
+        <a onclick="toggle_visibility('17');">
         <i>From Adams's $v_1$-periodicity to Andrews's motivic $w_1$-periodicity in homotopy groups</i></a><br />
-        <div id="21" class="toshow" style="display:none">
+        <div id="17" class="toshow" style="display:none">
             The purpose of this talk is to introduce Michael Andrews's work on discovering exotic periodicity in the homotopy groups of the motivic sphere spectrum and the 
             identification of six infinite families of.  Firstly, we will provide a brief overview of the chromatic phenomenon in classical homotopy theory and Adams's 
             8-periodic isomorphism, expressed by a Massey product in the Adams spectral sequence.  Then we will delve into motivic homotopy theory and explore the 
@@ -282,9 +282,9 @@
     <p>
         Apr 30, '24, 
         <b>Yunhao Sun</b>, 
-        <a onclick="toggle_visibility('17');">
+        <a onclick="toggle_visibility('19');">
         <i>Motives, motivic cohomology, and motivic homotopy: A historical introduction</i></a><br />
-        <div id="17" class="toshow" style="display:none">
+        <div id="19" class="toshow" style="display:none">
             In this talk, we will overview some aspects of the theory of motives.  There are some significant conjectures.  Currently, there are still more conjectures than 
             theorems in the field of motives.  We will also discuss motivic homotopy theory.  It can be thought of as a non-abelian generalization of motives.  The 
             philosophy of motives is to study universal invariants.  We will provide some examples to illustrate it.  
@@ -294,9 +294,9 @@
     <p>
         May 14, '24, 
         <b>Peng Huang</b>, 
-        <a onclick="toggle_visibility('19');">
+        <a onclick="toggle_visibility('20');">
         <i>Functoriality of the Postnikov tower</i></a><br/>
-        <div id="19" class="toshow" style="display:none">
+        <div id="20" class="toshow" style="display:none">
             <li>
             In this talk, I will introduce the Moore tower, Whitehead tower and particular the Postnikov tower. 
             I will show how to construct a Postnikov tower of a 0-connected CW complex and discuss the functoriality of the Postnikov tower. 
@@ -322,7 +322,7 @@
     <p>
         May 21, '24, 
         <b>Zhou Fang, Wenhui Yang, Chenlu Huang</b>, 
-        <a href="24spr/0521-FangYangHuang.pdf" target="_blank"><i>Topology and geometry in topological singularities</i></a><br />
+        <a href="24spr/0521-FangYangHuang.pdf" target="_blank"><i>Topology and geometry of singularities</i></a><br />
     </p>
 
     <p>
