--- a/grad/index.html
+++ b/grad/index.html
@@ -319,12 +319,24 @@
         </ul>
     </p>
 
+
     <p>
         May 21, '24, 
         <b>Zhou Fang, Wenhui Yang, Chenlu Huang</b>, 
-        <a href="24spr/0521-FangYangHuang.pdf" target="_blank"><i>Topology and geometry of singularities</i></a><br />
+        <a onclick="toggle_visibility('21');">
+        <i>Topology and geometry of singularities
+        <div id="21" class="toshow" style="display:none">
+            <li>In this talk, we will introduce topological classfication of Hamiltonians, especially for singularities in the relevant moduli spaces. 
+                The talk is devided into three parts: 
+                Zhou will explain the motivation and background, together with a specific example of the vector bundle in three-band systems. 
+                Wenhui will introduce the eigenbundle in two-band Hermitian systems and  non-Hermitian systems. 
+                Chenlu will show the eigenbundles of some interseting loops in three-band non-Hermitian systems.   
+            </li>           
+            <li><a href="24spr/0521-FangYangHuang.pdf" target="_blank"><i>Topology and geometry of singularities</i></a><br /></li>            
+        </div>
     </p>
 
+            
     <p>
         May 28, '24, 
         <b>Ni An</b>, 
