--- a/grad/index.html
+++ b/grad/index.html
@@ -332,7 +332,7 @@
                 Wenhui will introduce the eigenbundle in two-band Hermitian systems and  non-Hermitian systems. 
                 Chenlu will show the eigenbundles of some interseting loops in three-band non-Hermitian systems.   
             </li>           
-            <li><a href="24spr/0521-FangYangHuang.pdf" target="_blank"><i>Topology and geometry of singularities</i></a><br /></li>            
+            <li><a href="24spr/0521-FangYangHuang.pdf" target="_blank"><i>Slides</a></li>    
         </div>
     </p>
 
