--- a/grad/index.html
+++ b/grad/index.html
@@ -324,7 +324,7 @@
         May 21, '24, 
         <b>Zhou Fang, Wenhui Yang, Chenlu Huang</b>, 
         <a onclick="toggle_visibility('21');">
-        <i>Topology and geometry of singularities
+        <i>Topology and geometry of singularities</i></a><br />
         <div id="21" class="toshow" style="display:none">
             <li>In this talk, we will introduce topological classfication of Hamiltonians, especially for singularities in the relevant moduli spaces. 
                 The talk is devided into three parts: 
