--- a/grad/index.html
+++ b/grad/index.html
@@ -328,8 +328,8 @@
         <div id="21" class="toshow" style="display:none">
             <li>In this talk, we will introduce topological classfications of Hamiltonians, especially concerning singularities in the relevant moduli spaces. 
                 The talk consists of three parts: 
-                Zhou will explain the motivations and background, together with a specific example of the eigenbundle in three-band systems; 
-                Wenhui will then discuss the eigenbundles in two-band Hermitian systems and  non-Hermitian systems; 
+                Zhou will explain the motivations and background, together with a specific example of an eigenbundle in three-band systems; 
+                Wenhui will then discuss eigenbundles in two-band Hermitian systems and non-Hermitian systems; 
                 Chenlu will show the eigenbundle along some interesting loops in a moduli space for three-band non-Hermitian systems.   
             </li>           
             <li><a href="24spr/0521-FangYangHuang.pdf" target="_blank">Slides</a></li>    
