--- a/grad/index.html
+++ b/grad/index.html
@@ -251,6 +251,7 @@
         <a onclick="toggle_visibility('17');">
         <i>From Adams's $v_1$-periodicity to Andrews's motivic $w_1$-periodicity in homotopy groups</i></a><br />
         <div id="17" class="toshow" style="display:none">
+            <li>
             The purpose of this talk is to introduce Michael Andrews's work on discovering exotic periodicity in the homotopy groups of the motivic sphere spectrum and the 
             identification of six infinite families of.  Firstly, we will provide a brief overview of the chromatic phenomenon in classical homotopy theory and Adams's 
             8-periodic isomorphism, expressed by a Massey product in the Adams spectral sequence.  Then we will delve into motivic homotopy theory and explore the 
@@ -258,6 +259,9 @@
             spectral sequence.  This perspective allows us to consider multiplication by the non-nilpotent element $\eta$ as a $w_0$-periodic map, similar to the role 
             played by $2$ for the $v_0$-periodic map.  After defining a Thom reduction map to compare the $E_2$-pages of two spectral sequences, we can reduce the 
             existence of motivic $w_1^4$-periodic maps to the existence of classical $v_1^4$-periodic maps, as initially found by Adams in 1966.  
+            </li>
+
+            <li><a href="24spr/0416-Qu.pdf" target="_blank">Slides</a>  </li>
         </div>
     </p>
 
