--- a/grad/index.html
+++ b/grad/index.html
@@ -253,15 +253,15 @@
         <div id="17" class="toshow" style="display:none">
             <li>
             The purpose of this talk is to introduce Michael Andrews's work on discovering exotic periodicity in the homotopy groups of the motivic sphere spectrum and the 
-            identification of six infinite families of.  Firstly, we will provide a brief overview of the chromatic phenomenon in classical homotopy theory and Adams's 
+            identification of six infinite families of elements.  Firstly, we will provide a brief overview of the chromatic phenomenon in classical homotopy theory and Adams's 
             8-periodic isomorphism, expressed by a Massey product in the Adams spectral sequence.  Then we will delve into motivic homotopy theory and explore the 
             philosophy behind Haynes Miller's square, which serves as an analogy and connection between the motivic Adams spectral sequence and the classical Adams–Novikov 
             spectral sequence.  This perspective allows us to consider multiplication by the non-nilpotent element $\eta$ as a $w_0$-periodic map, similar to the role 
             played by $2$ for the $v_0$-periodic map.  After defining a Thom reduction map to compare the $E_2$-pages of two spectral sequences, we can reduce the 
-            existence of motivic $w_1^4$-periodic maps to the existence of classical $v_1^4$-periodic maps, as initially found by Adams in 1966.  
+            existence of motivic $w_1^4$-periodic maps to the existence of classical $v_1^4$-periodic maps, as initially found by Adams in the early 1960s.  
             </li>
 
-            <li><a href="24spr/0416-Qu.pdf" target="_blank">Slides</a>  </li>
+            <li><a href="24spr/0416-Qu.pdf" target="_blank">Notes</a>  </li>
         </div>
     </p>
 
@@ -330,7 +330,7 @@
         <a onclick="toggle_visibility('21');">
         <i>Topology and geometry of singularities</i></a><br />
         <div id="21" class="toshow" style="display:none">
-            <li>In this talk, we will introduce topological classfications of Hamiltonians, especially concerning singularities in the relevant moduli spaces. 
+            <li>In this talk, we will introduce topological classifications of Hamiltonians, especially concerning singularities in the relevant moduli spaces. 
                 The talk consists of three parts: 
                 Zhou will explain the motivations and background, together with a specific example of an eigenbundle in three-band systems; 
                 Wenhui will then discuss eigenbundles in two-band Hermitian systems and non-Hermitian systems; 
