--- a/grad/index.html
+++ b/grad/index.html
@@ -389,7 +389,7 @@
             <li> In this talk, I will introduce the main content of the paper ''The special fiber of the motivic deformation of the stable homotopy 
                 category is algebraic'' by Bogdan Gheorghe, Guozhen Wang, and Zhouli Xu. They define a Chow-Novikov t-structure on the category of module 
                 spectra over cofiber $S^{0,0}/\tau$, and establish that this category is equivalent to the derived category of $BP_*BP$-comodule category
-                as stable $\infity$-categories equipped with t-structures. 
+                as stable $\infty$-categories equipped with t-structures. 
         
                 An exciting application is the isomorphism between the motivic Adams spectral sequence for $S^{0,0}/\tau$ and the algebraic Novikov spectral 
                 sequence. This isomorphism enables Isaksen, Wang, and Xu to compute the stable homotopy groups of spheres up to the 90-stem.</li>
