--- a/grad/index.html
+++ b/grad/index.html
@@ -341,10 +341,16 @@
     </p>
 
             
-    <p>
+     <p>
         May 28, '24, 
-        <b>Ni An</b>, 
+        <b>Ni An</b>,
+        <a onclick="toggle_visibility('23');">
         <i>The colored Jones polynomial, Nahm sum and stability</i></a><br />
+        <div id="23" class="toshow" style="display:none">
+            <li>  In this talk, we will introduce Braid group and enhanced Yang-Baxter operator firstly. Next give the definition of colored Jones polynomial from the represention of Braid group by using Yang-Baxter operator. After knowing the definition, we will show a state sum formula for colored Jones polynomial which can be uesd to compute it conveniently.  Then we will give the limit of colored Jones polynomial for alternating knot which is in form of Nahm sum.
+            </li>
+            <li><a href="24spr/0528-An.pdf" target="_blank">Slides</a></li>    
+        </div>
     </p>
 
     <p>
