--- a/grad/index.html
+++ b/grad/index.html
@@ -358,7 +358,7 @@
     <p>
         June 4, '24, 
         <b>Zhonglin Wu</b>, 
-        <i>TBA</i></a><br />
+        <i>On "Secondary power operations and the Brown–Peterson spectrum at the prime 2"</i></a><br />
     </p>
 
 
