--- a/acts/index.html
+++ b/acts/index.html
@@ -317,9 +317,9 @@
     </p>
 
     <p>
-        TBD, '24, 
-        <b>Pingyao Feng</b>, 
-        <i>Artificial-intelligence-aided academic writing</i></a><br />
+        Jun 19, '24 (2 pm in M5024 / Tencent Meeting: 520-800-4008)
+        <b>Pingyao Feng et al.</b>, 
+        <i>Panel discussion/tutorial: Artificial-intelligence-aided academic writing, and other applications of computer hardwares/softwares in mathematical study and research</i></a><br />
     </p>
 
 
