--- a/grad/index.html
+++ b/grad/index.html
@@ -360,7 +360,12 @@
         <b>Zhonglin Wu</b>, 
         <i>On "Secondary power operations and the Brown–Peterson spectrum at the prime 2"</i></a><br />
     </p>
-
+    
+    <p>
+        June 14, '24, 
+        <b>Zhonglin Wu</b>, 
+        <i>On "Secondary power operations and the Brown–Peterson spectrum at the prime 2", II</i></a><br />
+    </p>
 
 <h3><a id="23"></a>Talks in Fall 2023 (Tuesdays 4:20 in M4009)</h3>
 
