--- a/grad/index.html
+++ b/grad/index.html
@@ -167,6 +167,7 @@
         <a onclick="toggle_visibility('14');">
         <i>An introduction to singularity theory, Milnor's fibration theorem and Brieskorn's construction of exotic spheres</i></a><br />
         <div id="14" class="toshow" style="display:none">
+            <li>
             Through this lecture, I will provide an overview of the singularity theory of complex analytic functions and polynomials, appreciating its wide-ranging 
             applications and contributions to various branches of mathematics.  I will begin by introducing fundamental concepts and definitions in this field, then proceed 
             to discuss the invariants and classification of simple singular points, highlighting their significance.  Furthermore, I will illustrate the intriguing 
@@ -176,6 +177,9 @@
             groundbreaking work of Milnor and Kervaire on the discovery and classification of exotic diffeomorphism structures on 7-dimensional spheres.  Additionally, I 
             will touch upon Brieskorn's explicit construction, which involves a family of polynomial singularities that gives rise to all exotic spheres.  This fascinating 
             exploration demonstrates the profound impact of singularity theory in the realm of differential topology.  
+            </li>
+            
+            <li><a href="24spr/0312-Qu.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
