--- a/grad/index.html
+++ b/grad/index.html
@@ -371,6 +371,28 @@
         <i>On "Secondary power operations and the Brown–Peterson spectrum at the prime 2", II</i></a><br />
     </p>
 
+    <p>
+        Jun 17, '24 (Monday in M5024 in the morning and in M4009 in the afternoon) 
+        <ul>
+            <li>10:00–11:30, <b>Tongtong Liang</b>, <i>TBA</i></li>
+
+            <li>15:00–16:00, <b>Yifan Wu</b>, <i>Transchromatic generalized character</i></li>
+
+            <li>16:30–17:30, <b>Jiacheng Liang</b>, <i>$\infty$-topos and parametrized homotopy theory</i></li>
+        </ul>
+    </p>
+
+    <p>
+        Jun 18, '24
+        <ul>
+            <li>10:00–11:30, <b>Xuecai Ma</b>, <i>Analytic Geometry and Homotopy Groups of the $K(n)$-Local Sphere</i></li>
+
+            <li>14:30–16:00, <b>Yunhao Sun</b>, <i>Kerz-Strunk-Tamme's vanishing theorem on $K$-theory</i></li>
+
+            <li>16:30–17:30, <b>Langwen Hui</b>, <i>Algebraic $K$-theory of finite fields</i></li>
+        </ul>
+    </p>
+
 <h3><a id="23"></a>Talks in Fall 2023 (Tuesdays 4:20 in M4009)</h3>
 
     <p>
