--- a/grad/index.html
+++ b/grad/index.html
@@ -372,13 +372,13 @@
     </p>
 
     <p>
-        Jun 17, '24 (Monday in M5024 in the morning and in M4009 in the afternoon) 
+        Jun 17, '24
         <ul>
-            <li>10:00–11:30, <b>Tongtong Liang</b>, <i>TBA</i></li>
+            <li>10:00–11:30, M5024, <b>Tongtong Liang</b> (University of California San Diego), <i>TBA</i></li>
 
-            <li>15:00–16:00, <b>Yifan Wu</b>, <i>Transchromatic generalized character</i></li>
+            <li>15:00–16:00, M4009, <b>Yifan Wu</b>, <i>Transchromatic generalized character</i></li>
 
-            <li>16:30–17:30, <b>Jiacheng Liang</b>, <i>$\infty$-topos and parametrized homotopy theory</i></li>
+            <li>16:30–17:30, M4009, <b>Jiacheng Liang</b>, <i>$\infty$-topos and parametrized homotopy theory</i></li>
         </ul>
     </p>
 
@@ -389,7 +389,7 @@
 
             <li>14:30–16:00, <b>Yunhao Sun</b>, <i>Kerz-Strunk-Tamme's vanishing theorem on $K$-theory</i></li>
 
-            <li>16:30–17:30, <b>Langwen Hui</b>, <i>Algebraic $K$-theory of finite fields</i></li>
+            <li>16:30–17:30, <b>Langwen Hui</b> (University of Illinois Urbana-Champaign), <i>Algebraic $K$-theory of finite fields</i></li>
         </ul>
     </p>
 
