--- a/grad/index.html
+++ b/grad/index.html
@@ -374,7 +374,7 @@
     <p>
         Jun 17, '24
         <ul>
-            <li>10:00–11:30, M5024, <b>Tongtong Liang</b> (University of California San Diego), <i>TBA</i></li>
+            <li>10:00–11:30, M5024, <b>Tongtong Liang</b> (University of California San Diego), <i>Geometric invariants in Adams spectral sequences</i></li>
 
             <li>15:00–16:00, M4009, <b>Yifan Wu</b>, <i>Transchromatic generalized character</i></li>
 
