--- a/grad/index.html
+++ b/grad/index.html
@@ -372,7 +372,7 @@
     </p>
 
     <p>
-        Jun 17, '24
+        Jun 17, '24 (Monday morning in M4009, afternoon in M5024) 
         <ul>
             <li>10:00–11:30, M5024, <b>Tongtong Liang</b> (University of California San Diego), <i>Geometric invariants in Adams spectral sequences</i></li>
 
@@ -383,7 +383,7 @@
     </p>
 
     <p>
-        Jun 18, '24
+        Jun 18, '24 (Tuesday in M5024) 
         <ul>
             <li>10:00–11:30, <b>Xuecai Ma</b>, <i>Analytic Geometry and Homotopy Groups of the $K(n)$-Local Sphere</i></li>
 
