--- a/grad/index.html
+++ b/grad/index.html
@@ -374,8 +374,6 @@
     <p>
         Jun 17, '24 (Monday morning in M5024, afternoon in M4009) 
         <ul>
-            <li>10:00–11:30, M5024, <b>Tongtong Liang</b> (University of California San Diego), <i>Geometric invariants in Adams spectral sequences</i></li>
-
             <li>15:00–16:00, M4009, <b>Yifan Wu</b>, <i>Transchromatic generalized character</i></li>
 
             <li>16:30–17:30, M4009, <b>Jiacheng Liang</b>, <i>$\infty$-topos and parametrized homotopy theory</i></li>
@@ -385,7 +383,9 @@
     <p>
         Jun 18, '24 (Tuesday in M5024) 
         <ul>
-            <li>10:00–11:30, <b>Xuecai Ma</b>, <i>Analytic Geometry and Homotopy Groups of the $K(n)$-Local Sphere</i></li>
+            <li>09:30–10:30, <b>Tongtong Liang</b> (University of California San Diego), <i>Geometric invariants in Adams spectral sequences</i></li>
+            
+            <li>11:00–12:00, <b>Xuecai Ma</b>, <i>Analytic Geometry and Homotopy Groups of the $K(n)$-Local Sphere</i></li>
 
             <li>14:30–16:00, <b>Yunhao Sun</b>, <i>Kerz-Strunk-Tamme's vanishing theorem on $K$-theory</i></li>
 
