--- a/grad/index.html
+++ b/grad/index.html
@@ -372,7 +372,7 @@
     </p>
 
     <p>
-        Jun 17, '24 (Monday morning in M5024, afternoon in M4009) 
+        Jun 17, '24 (Monday in M4009) 
         <ul>
             <li>15:00–16:00, M4009, <b>Yifan Wu</b>, <i>Transchromatic generalized character</i></li>
 
@@ -383,7 +383,7 @@
     <p>
         Jun 18, '24 (Tuesday in M5024) 
         <ul>
-            <li>09:30–10:30, <b>Tongtong Liang</b> (University of California San Diego), <i>Geometric invariants in Adams spectral sequences</i></li>
+            <li>9:30–10:30, <b>Tongtong Liang</b> (University of California San Diego), <i>Geometric invariants in Adams spectral sequences</i></li>
             
             <li>11:00–12:00, <b>Xuecai Ma</b>, <i>Analytic Geometry and Homotopy Groups of the $K(n)$-Local Sphere</i></li>
 
