--- a/grad/index.html
+++ b/grad/index.html
@@ -372,11 +372,11 @@
     </p>
 
     <p>
-        Jun 17, '24 (Monday in M4009) 
+        Jun 17, '24 (Monday in M616) 
         <ul>
-            <li>15:00–16:00, M4009, <b>Yifan Wu</b>, <i>Transchromatic generalized character</i></li>
+            <li>15:00–16:00, <b>Yifan Wu</b>, <a href="24spr/0617-WuYifan" target="_blank"><i>Transchromatic generalized character</i></a></li>
 
-            <li>16:30–17:30, M4009, <b>Jiacheng Liang</b>, <i>$\infty$-topos and parametrized homotopy theory</i></li>
+            <li>16:30–17:30, <b>Jiacheng Liang</b>, <a href="24spr/0617-LiangJiacheng" target="_blank"><i>$\infty$-topos and parametrized homotopy theory</i></a></li>
         </ul>
     </p>
 
@@ -387,9 +387,9 @@
             
             <li>11:00–12:00, <b>Xuecai Ma</b>, <i>Analytic Geometry and Homotopy Groups of the $K(n)$-Local Sphere</i></li>
 
-            <li>14:30–16:00, <b>Yunhao Sun</b>, <i>Kerz-Strunk-Tamme's vanishing theorem on $K$-theory</i></li>
+            <li>14:30–15:30, <b>Yunhao Sun</b>, <a href="24spr/0618-Sun" target="_blank"><i>Kerz-Strunk-Tamme's vanishing theorem on $K$-theory</i></a></li>
 
-            <li>16:30–17:30, <b>Langwen Hui</b> (University of Illinois Urbana-Champaign), <i>Algebraic $K$-theory of finite fields</i></li>
+            <li>16:00–17:30, <b>Langwen Hui</b> (University of Illinois Urbana-Champaign), <a href="24spr/0618-HuiLangwen" target="_blank"><i>Algebraic $K$-theory of finite fields</i></a></li>
         </ul>
     </p>
 
