--- a/grad/index.html
+++ b/grad/index.html
@@ -374,22 +374,22 @@
     <p>
         Jun 17, '24 (Monday in M616) 
         <ul>
-            <li>15:00–16:00, <b>Yifan Wu</b>, <a href="24spr/0617-WuYifan" target="_blank"><i>Transchromatic generalized character</i></a></li>
+            <li>15:00–16:00, <b>Yifan Wu</b>, <a href="24spr/0617-WuYifan.pdf" target="_blank"><i>Transchromatic generalized character</i></a></li>
 
-            <li>16:30–17:30, <b>Jiacheng Liang</b>, <a href="24spr/0617-LiangJiacheng" target="_blank"><i>$\infty$-topos and parametrized homotopy theory</i></a></li>
+            <li>16:30–17:30, <b>Jiacheng Liang</b>, <a href="24spr/0617-LiangJiacheng.pdf" target="_blank"><i>$\infty$-topos and parametrized homotopy theory</i></a></li>
         </ul>
     </p>
 
     <p>
         Jun 18, '24 (Tuesday in M5024) 
         <ul>
-            <li>9:30–10:30, <b>Tongtong Liang</b> (University of California San Diego), <i>Geometric invariants in Adams spectral sequences</i></li>
+            <li>9:30–10:30, <b>Tongtong Liang</b> (University of California San Diego), <a href="24spr/0618-LiangTongtong.pdf" target="_blank"><i>Geometric invariants in Adams spectral sequences</i></a></li>
             
-            <li>11:00–12:00, <b>Xuecai Ma</b>, <i>Analytic Geometry and Homotopy Groups of the $K(n)$-Local Sphere</i></li>
+            <li>11:00–12:00, <b>Xuecai Ma</b>, <a href="24spr/0618-Ma.pdf" target="_blank"><i>Analytic Geometry and Homotopy Groups of the $K(n)$-Local Sphere</i></a></li>
 
-            <li>14:30–15:30, <b>Yunhao Sun</b>, <a href="24spr/0618-Sun" target="_blank"><i>Kerz-Strunk-Tamme's vanishing theorem on $K$-theory</i></a></li>
+            <li>14:30–15:30, <b>Yunhao Sun</b>, <a href="24spr/0618-Sun.pdf" target="_blank"><i>Kerz-Strunk-Tamme's vanishing theorem on $K$-theory</i></a></li>
 
-            <li>16:00–17:30, <b>Langwen Hui</b> (University of Illinois Urbana-Champaign), <a href="24spr/0618-HuiLangwen" target="_blank"><i>Algebraic $K$-theory of finite fields</i></a></li>
+            <li>16:00–17:30, <b>Langwen Hui</b> (University of Illinois Urbana-Champaign), <a href="24spr/0618-HuiLangwen.pdf" target="_blank"><i>Algebraic $K$-theory of finite fields</i></a></li>
         </ul>
     </p>
 
