--- a/grad/index.html
+++ b/grad/index.html
@@ -293,9 +293,12 @@
         <a onclick="toggle_visibility('20');">
         <i>Motives, motivic cohomology, and motivic homotopy: A historical introduction</i></a><br />
         <div id="20" class="toshow" style="display:none">
+            <li>
             In this talk, we will overview some aspects of the theory of motives.  There are some significant conjectures.  Currently, there are still more conjectures than 
             theorems in the field of motives.  We will also discuss motivic homotopy theory.  It can be thought of as a non-abelian generalization of motives.  The 
-            philosophy of motives is to study universal invariants.  We will provide some examples to illustrate it.  
+            philosophy of motives is to study universal invariants.  We will provide some examples to illustrate it.  (The last part of this report was delivered by handwritting.)
+            </li>
+            <li><a href="24spr/0430-Sun.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
     
